gcc/testsuite/algol68/compile/error-mode-stropping-16.a68
begin flex[1:0]int j;
      j := "joo" { dg-error "char.*flex.*int" }
end
